@@ -44,6 +44,7 @@
 #' @param swap_rownames Column name of \code{rowData(object)} to be used to
 #'  identify features instead of \code{rownames(object)} when labelling plot
 #'  elements.
+#' @param point.padding See \code{?ggrepel::geom_text_repel}.
 #' @param ... Additional arguments for visualization, see
 #' \code{?"\link{scater-plot-args}"} for details.
 #'
@@ -92,7 +93,7 @@ plotReducedDim <- function(object, dimred, ncomponents = 2, percentVar = NULL,
         by_exprs_values = "logcounts",
         text_by = NULL, text_size = 5, text_colour = "black",
         label_format = c("%s %i", " (%i%%)"), other_fields = list(),
-        swap_rownames = NULL, ...
+        swap_rownames = NULL, point.padding = NA, ...
     ) {
 
     ## Extract reduced dimension representation of cells
@@ -167,7 +168,8 @@ plotReducedDim <- function(object, dimred, ncomponents = 2, percentVar = NULL,
                     ),
                     mapping = aes(x = x, y = y, label = label),
                     inherit.aes = FALSE,
-                    size = text_size, colour = text_colour
+                    size = text_size, colour = text_colour,
+                    point.padding = point.padding
                 )
         }
 
